# nerfies-to-3d-generative

./: .gitignore  Pipfile  README.md  high-res-video-urls.json  pyproject.toml  requirements.txt  setup.cfg
neural_pseudo_scan/: preprocess_mannequin_challenge.py
src/neural_pseudo_scan/: preprocess_mannequin_challenge.py  run_deca_on_video.py  sample_nerfie.py
